[tool.poetry]
name = "llama2_vi"
version = "0.1.0"
description = ""
authors = ["Pham Van Ngoan <ngoanpham1196@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
torch = ">=1.13.1"
transformers = "4.29.1"
datasets = ">=2.12.0"
accelerate = ">=0.21.0"
peft = ">=0.4.0"
trl = ">=0.5.0"
scipy = "^1.11.2"
sentencepiece = "^0.1.99"
tiktoken = "^0.4.0"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
nltk = "^3.8.1"
gradio = ">=3.36.0"
uvicorn = "^0.23.2"
pydantic = "1.10.11"
fastapi = "0.95.1"
sse-starlette = "^1.6.5"
matplotlib = "^3.7.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
